--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         </title>
         <link rel="stylesheet" href="atilo.css" media="screen" type="text/css" />
         <link rel="stylesheet" href="atilo2.css" media="screen" type="text/css" />
-        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.10.0/dijit/themes/claro/claro.css" media="screen">
-        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.10.0/dojox/form/resources/CheckedMultiSelect.css" media="screen">
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/dojo/1.10.0/dijit/themes/claro/claro.css" media="screen">
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/dojo/1.10.0/dojox/form/resources/CheckedMultiSelect.css" media="screen">
 
 		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.10.0/dojo/dojo.js" data-dojo-config="isDebug: true, async: false, parseOnLoad: true"></script>
 
