--- a/contact.html
+++ b/contact.html
@@ -21,19 +21,19 @@
 		If you want to send me a comment about ATILO, a patch, idea, etc., you can use my email address: <br>
 		<br>
 		Olivier <i>dot</i> Singla <i>at</i> gmail <i>dot</i> com <br>
-		<br>
-		<a href="http://www.linkedin.com/in/osingla" target="_blank">My profile on LinkedIn</a>
 		
-		<br>
 		<br>
 		<hr>
 		<br>
 		Some other open-source programs: <br>
 		<br>
-		<a href="http://couijs.sourceforge.net/" target="_blank">COUIJS - Build the user-interface from an XML-based configuration file<a>
+        <a href="https://rawgit.com/osingla/RouteView/master/RouteView.html" target="_blank"> RouteView - Google StreetView Player - Virtual Drive / Virtual Ride using Google Street View</a>
 		<br>
 		<br>
-		<a href="http://messip.sourceforge.net/" target="_blank">MessIP - Message-Passing over TCP/IP<a>
+		<a href="https://rawgit.com/osingla/RouteView/master/RouteView.html" target="_blank">COUIJS - Build the user-interface from an XML-based configuration file<a>
+		<br>
+		<br>
+		<a href="https://rawgit.com/osingla/messip/gh-pages/index.html" target="_blank">MessIP - Message-Passing over TCP/IP<a>
 		<br>
 		<br>
 		<a href="http://freelife.sourceforge.net/" target="_blank">FreeLife - Conway's Game of Life<a>
