Add debian package

--- a/download.html
+++ b/download.html
@@ -37,6 +37,13 @@
 		</div>
         <br>
         Please note that atilo is based on GTK2, so the development version of GTK2 needs to be installed on your system.
+		<br>
+		Typically, on a Debian 9 (stretch), you will need to (at least) install these packages:
+		<span style="line-height: 200%"></span>
+		<div style="font-size: large; font-family: monospace; background-color: #e0e0e0" >
+			apt-get install pkg-config <br>
+			apt-get install gtk2.0 build-essential libgtk2.0-dev
+		</div>
 
 		<br>
 		<br>
