Add debian package

--- a/download.html
+++ b/download.html
@@ -18,8 +18,8 @@
 
     <body>
 
-		This program is provided only as source form. <br>
-		It is written in C (not C++), using GTK 2.0 for the user-interface. <br>
+		This program is provided only as source form and also a amd64 debian package. <br>
+		It is written in plain C (not C++), using GTK 2.0 for the user-interface. <br>
 		It should compile w/o problem on any Linux Distribution and FreeBSD, as long you have GTK 2.0 development installed.<br>
 		<br>
 		To download the source, use svn:
@@ -49,7 +49,9 @@
 		<br>
 		<hr>
 		<br>
-
+		You can download the amd64 Debian 9 package here: <br>
+		<a href="http://streetviewplayer.org/atilo/atilo_1.0_amd64.deb">atilo_1.0_amd64.deb</a>
+		<br>
 		
     </body>
 
