--- a/download.html
+++ b/download.html
@@ -49,9 +49,15 @@
 		<br>
 		<hr>
 		<br>
-		You can download the amd64 Debian 9 package here: <br>
+		You can download the amd64 Debian 9/10 package here: <br>
 		<a href="http://streetviewplayer.org/atilo/atilo_1.0_amd64.deb">atilo_1.0_amd64.deb</a>
 		<br>
+        <br>
+        The program is installed at this location: <br>
+		<div style="font-size: large; font-family: monospace; background-color: #e0e0e0" >
+            /usr/sbin/atilo
+		</div>
+        <br>
 		
     </body>
 
